# vaner-linux

./: CHANGELOG.md  MAINTAINING.md  README.md  index.html  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
conf/: distributions
db/: checksums.db  packages.db  references.db  release.caches.db  tracking.db
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Packages.bz2
scripts/: build-local-appimage.sh  install.sh  run-local-appimage.sh  ship-gate.sh  vaner-local-cli.sh
scripts/ci/: build-apt-repo.sh  verify-artifacts.sh  windows-ui-smoke.ps1
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/linux/: vaner.desktop
src-tauri/src/: agent_detector.rs  bring_up.rs  clients.rs  commands.rs  diagnostics.rs  engine.rs  lib.rs  tray.rs  updater.rs  vaner_cli.rs
src/lib/: prepared-work-actions.test.ts  prepared-work-actions.ts
src/lib/components/: SetupWizard.svelte  UpdateBanner.svelte  WizardVerificationPanel.svelte
src/lib/components/popover-states/: ActivePredictions.svelte  Learning.svelte  Paused.svelte  PopoverContextBlock.svelte  PopoverQuickActions.svelte  PredictionWorkSwitcher.svelte  Prepared.svelte  PreparedWork.svelte  Watching.svelte
src/lib/components/primitives/: DocsLink.svelte
src/lib/state/: reducer.test.ts  reducer.ts  types.ts
src/lib/stores/: app-state.ts  focus.ts  predictions.ts  prepared-work.ts  updater.ts  vaner-state.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/companion/: +layout.svelte  +page.svelte
src/routes/companion/panes/: AgentsPane.svelte  AgentsPane.test.ts  DiagnosticsPane.svelte  (+5 more)
(+1 files in other folders)
