[package]
name = "vaner-desktop"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Cross-platform (Linux + Windows) desktop companion for the Vaner predictive-context engine."
authors = ["Borgels <maintainer@borgels.com>"]
homepage = "https://vaner.ai"
license = "Apache-2.0"
repository = "https://github.com/Borgels/vaner-desktop"

[lib]
# Tauri v2 exposes the app as both a library (so mobile targets can
# wrap it) and a binary. The library carries the actual `run()`.
name = "vaner_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "fs"] }
async-trait = "0.1"
which = "7"
libc = "0.2"

# Shared contract layer. Pinned to the feat/vaner-contract-crate tag
# until L1 lands on main; swap to `tag = "v0.8.x"` then.
vaner-contract = { git = "https://github.com/Borgels/Vaner.git", branch = "feat/vaner-contract-crate", features = ["http", "sse"] }
